@startuml
left to right direction
skinparam roundcorner 5
skinparam linetype ortho
skinparam shadowing false
skinparam handwritten false
skinparam class {
    BackgroundColor white
    ArrowColor #2688d4
    BorderColor #2688d4
}


!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>


table( ft_medikament ) {
  primary_key( pharma_nummer ): CHARACTER VARYING(7)
  column( register_nummer_prefix ) : CHARACTER VARYING(2)
  column( register_nummer ) : CHARACTER VARYING(6)
  column( name ) : CHARACTER VARYING(100)
  column( darreichungsform ) : CHARACTER VARYING(9)
  column( teilbarkeit ) : CHARACTER VARYING(3)
  column( packungshinweis ) : CHARACTER VARYING(28)
  column( wirkstoff_information ) : CHARACTER VARYING(2048)
}

table( ft_eko_eintrag ) {
	primary_key( id ): INTEGER
	column( box ) : CHARACTER(1)
  column( kassenzeichen ) : CHARACTER VARYING(3)
  column( kassenverkaufspreis ) : NUMBER
  column( kvp_pro_einheit ) : NUMBER
  column( preismodell ) : CHARACTER VARYING(3)
  column( regeltext ) : CHARACTER VARYING(2048)
  column( hinweis ) : CHARACTER VARYING(2048)
  column( langzeitbewilligung ) : CHARACTER VARYING(3)
  column( suchtgiftvignete ) : CHARACTER VARYING(3)
  column( rezeptflicht ) : INTEGER
  column( rezeptpflicht_bezeichnung) : CHARACTER VARYING(60)
  column( abgabeanzahl ) : INTEGER
  column( position_preisvergleich) : INTEGER
  column( indikations_text) : CHARACTER VARYING(2000)
  foreign_key( medikament ) : CHARACTER VARYING(7) <<FK>>
  foreign_key( valid_date ): INTEGER <<FK>>
}

table( dt_atc_code ){
 primary_key(code): CHARACTER VARYING(6)
 column(text): CHARACTER VARYING(128)
 column(anatomische_hauptgruppe): CHARACTER_VARYING(1)
 column(therapeutische_untergruppe): CHARACTER_VARYING(3)
 column(pharmakologische_untergruppe): CHARACTER VARYING(4)
 column(chemische_untergruppe): CHARACTER VARYING(5)
}

table( ft_wirkstoff ){
	primary_key( id ): INTEGER
	column( laufnummer ): INTEGER
	column( wirkstoff_staerke ): CHARACTER VARYING(10)
	column( dimension_wirkstoff_staerke ): CHARACTER VARYING(9)
	column( wirkstoff_eigenschaft ) : CHARACTER VARYING(20)
	foreign_key( pharma_atc_code ): CHARACTER_VARYING(6) <<FK>>
	foreign_key( wirkstoffteil_atc_code): CHARACTER VARYING(6) <<FK>>
	foreign_key( medikament ) : CHARACTER VARYING(7) <<FK>>
}

table(dt_date){
	primary_key( id ): INTEGER
	column( date ) : date
	column( year ) : INTEGER
	column( month ) : INTEGER
	column( day_of_month): INTEGER
}

table(ft_medikament_vergleich){
	primary_key( id ) : INTEGER
	column( position_vergleichsmedikament ) : INTEGER
	column( vergleichs_kennzeichen ) : INTEGER
	foreign_key( eko_eintrag ) : INTEGER <<FK>>
	foreign_key( vergleichs_medikament ) : CHARACTER VARYING(7) <<FK>>
}

ft_medikament "1" -- "1..*" ft_wirkstoff
ft_wirkstoff "*" -- "1..2" dt_atc_code
ft_medikament "1" -- "1..*" ft_eko_eintrag
ft_eko_eintrag "1..*" -- "1" dt_date
ft_eko_eintrag "1" -- "*" ft_medikament_vergleich
ft_medikament_vergleich "*" -- "1" ft_medikament 

@enduml